Changes in @NEW@:
  o New Features:
  o Bug Fixes:
  o Internal Changes:

Changes in 2.1.14:
  o Bug Fixes:
    * Disable diff/patch merging for RPM config files (CNY-3399)

  o New Features:
    * Added support for RPM capsules to ChangesetExploder class

  o Internal Changes:
    * Added file flags to allow conary to override file contents and attributes
      for capsule-based files (such as from RPM).
    * Changesets are now loaded incrementally rather than as one big string;
      this avoids a potentially large memory spike opening large changesets
    * Added slots to various stream and trove objects
    * StreamCollections are intialized as if thawing an empty string rather
      than instantiating all of the child elements (which are often not needed
      anyway). This reduces total ram usage by more than 5% on large
      changesets.

Changes in 2.1.13:
  o Bug Fixes:
    * Fixed crash in lookaside.fetchURL when accessing an authenticated http
      URI using python 2.6.5. (CNY-3393)
    * Changes for sharing files with different fileIDs are now done for
      non-encapsulated files as well. (CNY-3396)
    * Installing critical packages as part of jobs which cannot be split
      due to capsules no longer causes an exception.
    * The Conary command-line client will no longer traceback when command
      specific options are given without a command
      (e.g. 'conary --what-requires'). (CNY-3364)

Changes in 2.1.12:
  o New Features:
    * Config files from RPM capsules are now handled by Conary instead of
      RPM, including diff/patch merging.
    * Emulate RPM file coloring behavior to allow a package to take
      ownership of files from another package based on the ABI used
      by those binaries. (CNY-3385)
    * File sharing no longer requires identical fileIds. Files can now be
      shared between troves even if metadata like link groups is different
      between the files.
    * The caching layer in the Conary proxy will now use locking